--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.2.10
 Django==3.1.1
+django-cors-headers==3.5.0
+django-utils-six==2.0
 djangorestframework==3.11.1
 djangorestframework-jwt==1.11.0
 PyJWT==1.7.1
