--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,25 @@
 asgiref==3.2.10
+bcrypt==3.2.0
+blinker==1.4
+cffi==1.14.3
+click==7.1.2
 Django==3.1.1
 django-cors-headers==3.5.0
 django-utils-six==2.0
 djangorestframework==3.11.1
 djangorestframework-jwt==1.11.0
+Flask==1.1.2
+Flask-Bcrypt==0.7.1
+Flask-Cors==3.0.9
+Flask-Mail==0.9.1
+Flask-SQLAlchemy==2.4.4
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+pycparser==2.20
 PyJWT==1.7.1
 pytz==2020.1
+six==1.15.0
+SQLAlchemy==1.3.19
 sqlparse==0.3.1
+Werkzeug==1.0.1
