--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,11 @@ backend/backend/__pycache__
 backend/user/__pycache__
 backend/post/__pycache__
 backend/cheer/__pycache__
+backend/coral/__pycache__
 backend/post/migrations
 backend/user/migrations
 backend/cheer/migrations
+backend/coral/migrations
 backend/db.sqlite3
 
 mobile-app/node_modules/**/*
