--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.2.10
 bcrypt==3.2.0
 blinker==1.4
+certifi==2020.6.20
 cffi==1.14.3
+chardet==3.0.4
 click==7.1.2
 Django==3.1.1
 django-cors-headers==3.5.0
@@ -13,13 +15,16 @@ Flask-Bcrypt==0.7.1
 Flask-Cors==3.0.9
 Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.4.4
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 pycparser==2.20
 PyJWT==1.7.1
 pytz==2020.1
+requests==2.24.0
 six==1.15.0
 SQLAlchemy==1.3.19
 sqlparse==0.3.1
+urllib3==1.25.10
 Werkzeug==1.0.1
