--- a/requirements.txt
+++ b/requirements.txt
@@ -10,21 +10,37 @@ django-cors-headers==3.5.0
 django-utils-six==2.0
 djangorestframework==3.11.1
 djangorestframework-jwt==1.11.0
+filelock==3.0.12
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
 Flask-Cors==3.0.9
 Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.4.4
+future==0.18.2
+gdown==3.12.2
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
+joblib==0.17.0
 MarkupSafe==1.1.1
+numpy==1.19.2
 pycparser==2.20
 PyJWT==1.7.1
 pytz==2020.1
+regex==2020.9.27
 requests==2.24.0
+sacremoses==0.0.43
+scikit-learn==0.23.2
+scipy==1.5.2
+sentencepiece==0.1.91
 six==1.15.0
+sklearn==0.0
 SQLAlchemy==1.3.19
 sqlparse==0.3.1
+threadpoolctl==2.1.0
+tokenizers==0.7.0
+torch==1.6.0
+tqdm==4.50.2
+transformers==2.9.0
 urllib3==1.25.10
 Werkzeug==1.0.1
