--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -8,31 +8,34 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "2.4.0",
+    "@react-native-community/datetimepicker": "3.0.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^5.8.0",
-    "@react-navigation/drawer": "^5.9.0",
-    "@react-navigation/native": "^5.7.3",
-    "@react-navigation/stack": "^5.9.0",
+    "@react-navigation/drawer": "^5.9.2",
+    "@react-navigation/material-top-tabs": "^5.2.18",
+    "@react-navigation/native": "^5.7.5",
+    "@react-navigation/stack": "^5.9.2",
     "axios": "^0.20.0",
-    "expo": "~38.0.8",
-    "expo-secure-store": "~9.0.1",
-    "expo-status-bar": "^1.0.2",
-    "lottie-react-native": "~2.6.1",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-gesture-handler": "~1.6.0",
+    "expo": "~39.0.2",
+    "expo-device": "~2.3.0",
+    "expo-linking": "^1.0.4",
+    "expo-local-authentication": "~9.3.0",
+    "expo-secure-store": "~9.2.0",
+    "expo-status-bar": "~1.0.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native-appearance": "~0.3.3",
+    "react-native-gesture-handler": "~1.7.0",
     "react-native-gifted-chat": "^0.16.3",
-    "react-native-paper": "^4.1.0",
-    "react-native-reanimated": "~1.9.0",
-    "react-native-safe-area-context": "~3.0.7",
-    "react-native-screens": "~2.9.0",
-    "react-native-web": "~0.11.7"
+    "react-native-paper": "^4.2.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
+    "react-native-screens": "~2.10.1",
+    "react-native-tab-view": "^2.15.1",
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0"
+    "@babel/core": "~7.9.0"
   },
   "private": true
 }
