--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ backend/post/migrations
 backend/user/migrations
 backend/cheer/migrations
 backend/coral/migrations
+backend/post/*.txt
 backend/db.sqlite3
 
 mobile-app/node_modules/**/*
