--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
 click==7.1.2
+decorator==4.4.2
 Django==3.1.1
 django-cors-headers==3.5.0
 django-utils-six==2.0
@@ -23,9 +24,13 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 joblib==0.17.0
 MarkupSafe==1.1.1
+networkx==2.5
+nltk==3.5
 numpy==1.19.2
+pandas==1.1.3
 pycparser==2.20
 PyJWT==1.7.1
+python-dateutil==2.8.1
 pytz==2020.1
 regex==2020.9.27
 requests==2.24.0
