--- a/requirements.txt
+++ b/requirements.txt
@@ -27,9 +27,11 @@ MarkupSafe==1.1.1
 networkx==2.5
 nltk==3.5
 numpy==1.19.2
+packaging==20.4
 pandas==1.1.3
 pycparser==2.20
 PyJWT==1.7.1
+pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
 regex==2020.9.27
@@ -37,15 +39,16 @@ requests==2.24.0
 sacremoses==0.0.43
 scikit-learn==0.23.2
 scipy==1.5.2
+sentence-transformers==0.3.8
 sentencepiece==0.1.91
 six==1.15.0
 sklearn==0.0
 SQLAlchemy==1.3.19
 sqlparse==0.3.1
 threadpoolctl==2.1.0
-tokenizers==0.7.0
+tokenizers==0.8.1rc2
 torch==1.6.0
 tqdm==4.50.2
-transformers==2.9.0
+transformers==3.3.1
 urllib3==1.25.10
 Werkzeug==1.0.1
