--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,13 @@
     "axios": "^0.21.0",
     "clsx": "^1.1.1",
     "date-fns": "^2.16.1",
+    "jwt-decode": "^3.0.0",
     "notistack": "^1.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-visibility-sensor": "^5.1.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
