--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-visibility-sensor": "^5.1.1",
+    "react-window": "^1.8.6",
+    "react-window-infinite-loader": "^1.0.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
