--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,11 @@
     "jwt-decode": "^3.0.0",
     "notistack": "^1.0.1",
     "react": "^17.0.1",
+    "react-chat-widget": "^3.0.5",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-visibility-sensor": "^5.1.1",
-    "react-window": "^1.8.6",
-    "react-window-infinite-loader": "^1.0.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
