--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Flask-Cors==3.0.9
 Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.4.4
 future==0.18.2
+fuzzywuzzy==0.18.0
 gdown==3.12.2
 idna==2.10
 itsdangerous==1.1.0
@@ -29,10 +30,12 @@ nltk==3.5
 numpy==1.19.2
 packaging==20.4
 pandas==1.1.3
+psycopg2-binary==2.8.6
 pycparser==2.20
 PyJWT==1.7.1
 pyparsing==2.4.7
 python-dateutil==2.8.1
+python-Levenshtein==0.12.0
 pytz==2020.1
 regex==2020.9.27
 requests==2.24.0
