--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ backend/post/__pycache__
 backend/cheer/__pycache__
 backend/coral/__pycache__
 backend/search_data/__pycache__
+backend/search/__pycache__
 backend/post/migrations
 backend/user/migrations
 backend/cheer/migrations
