Ready for build

--- a/mobile-app/app.json
+++ b/mobile-app/app.json
@@ -1,14 +1,16 @@
 {
   "expo": {
-    "name": "mobile-app",
-    "slug": "mobile-app",
+    "name": "ocean",
+    "description": "The mental wellbeing social media",
+    "scheme": "ocean",
+    "slug": "ocean",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "resizeMode": "cover",
+      "backgroundColor": "#000000"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -19,6 +21,10 @@
     ],
     "ios": {
       "supportsTablet": true
+    },
+    "android": {
+      "package": "com.ocean.ocean",
+      "versionCode": 1
     },
     "web": {
       "favicon": "./assets/favicon.png"
