--- a/mobile-app/package.json
+++ b/mobile-app/package.json
@@ -19,6 +19,7 @@
     "expo-device": "~2.3.0",
     "expo-linking": "^1.0.4",
     "expo-local-authentication": "~9.3.0",
+    "expo-mail-composer": "~8.4.0",
     "expo-secure-store": "~9.2.0",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
