--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 venv
+data
 .idea
 .vscode
 backend/.idea
@@ -38,8 +39,6 @@ coral/bot/
 mobile-app/.DS_Store
 
 # front end
-
-
 # dependencies
 frontend/node_modules
 frontend/.pnp
